# rust-bazel-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
.github/workflows/: build.yml
program/: BUILD.bazel  Cargo.toml
program/src/: main.rs  some.rs
