load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "my_program",
    edition = "2021",
    srcs = ["src/main.rs", "src/some.rs",],
    deps = [ "@crate_index//:bumpalo" ],
    # You can also do this instead of the above `deps`.
    #deps = all_crate_deps(
       #normal = True,
    #),
    proc_macro_deps = all_crate_deps(
       proc_macro = True,
    ),
)
